Change photo, add object-fit property avoid image distortion

--- a/styles.css
+++ b/styles.css
@@ -226,7 +226,9 @@ p {
 }
 
 .name img {
+  height: 200px;
   width: 200px;
+  object-fit: cover;
   border-radius: 100%;
 }
 
